--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "author": "Alfio Piccione <dev.alfiopiccione@gmail.com >",
   "license": "GPL-2.0",
   "devDependencies": {
-    "grunt": "^1.1.0",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt": ">=1.3.0",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-exec": "^3.0.0"
   },
   "dependencies": {
-    "lodash": ">=4.17.19"
+    "lodash": ">=4.17.21"
   }
 }
