--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "author": "Alfio Piccione <dev.alfiopiccione@gmail.com >",
   "license": "GPL-2.0",
   "devDependencies": {
-    "grunt": ">=1.3.0",
+    "grunt": "^1.4.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
     "grunt-exec": "^3.0.0"
   },
   "dependencies": {
