--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "grunt": "^1.5.3",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-sass": "^2.0.0",
-    "grunt-contrib-uglify": "^5.2.1",
-    "grunt-exec": "^3.0.0"
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-exec": "^3.0.0",
+    "minimatch": "^5.1.0"
   },
   "dependencies": {
     "lodash": ">=4.17.21"
